<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="Configuración de cuenta"
                android:textAlignment="center"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/swDesactivarCuenta"
                android:text="Desactivar mi cuenta"
                android:textSize="17dp"
                android:onClick="onclick"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Mis datos"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfiguracionNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido_paterno">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfiguracionAppPat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido_materno">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfiguracionAppMat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfiguracionTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_2">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfiguracionTelefono2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direcci_n">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfiguracionDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp">
                <Button
                    android:text="Editar mis datos"
                    android:id="@+id/btnConfEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="end|left"/>
                <Button
                    android:text="Guardar cambios"
                    android:layout_gravity="end|right"
                    android:id="@+id/btnConfCambiosGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textStyle="bold"/>
                <Button
                    android:text="Cancelar"
                    android:layout_gravity="end|left"
                    android:id="@+id/btnConfCambiosCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textStyle="bold"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>